<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_cost"
            android:inputType="textLongMessage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/select_category"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/category_list_spinner"
                android:layout_width="match_parent"
                android:layout_height="30dp" />
        </LinearLayout>

        <Button
            android:id="@+id/added"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addCost"
            android:text="@string/enter" />
    </LinearLayout>

</RelativeLayout>